--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         <div class="pluginsContent">
           <h1>Premium Plugins</h1>
           <div class="pluginCards">
-            <!-- card1 ****************************** -->
+            <!-- Card 1 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -745,11 +745,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
+                <h3>Flickity</h3>
                 <p>Responsive Content Slider</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 2 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -766,11 +766,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Fancybox</h3>
+                <p>Responsive, Fullscreen Gallery</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 3 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -787,11 +787,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Isotope</h3>
+                <p>Fitted masonry layouts</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 4 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -808,11 +808,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Video Backgrounds</h3>
+                <p>YouTube, Vimeo, and Local</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 5 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -829,11 +829,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Parallax</h3>
+                <p>Backgrounds or any element</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 6 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -850,11 +850,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Scroll Animations</h3>
+                <p>Create dynamic pages</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 7 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -871,11 +871,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Timeline</h3>
+                <p>Animations built on GSAP</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 8 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -892,11 +892,11 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Lazy Loading</h3>
+                <p>Optimized for media and images</p>
               </div>
             </div>
-            <!-- card1 ****************************** -->
+            <!-- Card 9 -->
             <div class="pluginCard">
               <div class="icon">
                 <svg
@@ -913,13 +913,14 @@
                 </svg>
               </div>
               <div class="text">
-                <h3>Flickty</h3>
-                <p>Responsive Content Slider</p>
+                <h3>Scroll Snap</h3>
+                <p>Touch-friendly snapping</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <section class="NotableFeatures">
         <div class="notableFeaturesContent">
           <h1>Notable Features</h1>
@@ -1303,6 +1304,176 @@
             </div>
           </div>
           <h3>Still have questions?<span> Get in touch</span></h3>
+        </div>
+      </section>
+      <section class="footer">
+        <div class="footercontent">
+          <div class="blueBox">
+            <h1>Start building beautiful websites</h1>
+            <button>Purchace Now</button>
+          </div>
+          <div class="information">
+            <div class="navigate">
+              <h2>Navigate</h2>
+              <ul>
+                <li>Demo</li>
+                <li>Pages</li>
+                <li>Blog</li>
+                <li>Portfolio</li>
+                <li>Elements</li>
+              </ul>
+            </div>
+            <div class="contact">
+              <h2>Contact</h2>
+              <div class="first">
+                <div class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-geo-alt-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
+                    />
+                  </svg>
+                </div>
+                <div class="text">
+                  <p>348 Greenpoint Avenue Brooklyn, NY</p>
+                </div>
+              </div>
+              <div class="first">
+                <div class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-geo-alt-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
+                    />
+                  </svg>
+                </div>
+                <div class="text">
+                  <p>348 Greenpoint Avenue Brooklyn, NY</p>
+                </div>
+              </div>
+              <div class="first">
+                <div class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-geo-alt-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
+                    />
+                  </svg>
+                </div>
+                <div class="text">
+                  <p>348 Greenpoint Avenue Brooklyn, NY</p>
+                </div>
+              </div>
+            </div>
+            <div class="subcribe">
+              <h2>Subscribe</h2>
+              <p>
+                The latest Leap news, articles, and resources, sent straight to
+                your inbox every month.
+              </p>
+              <input type="text" placeholder="Email Address" />
+              <button>Subscribe</button>
+              <h5>We’ll never share your details. See our Privacy Policy</h5>
+            </div>
+          </div>
+          <div class="subFooter">
+            <div class="icons">
+              <!-- icon1 ********************************************* -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-instagram"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
+                />
+              </svg>
+              <!-- icon2********************************************* -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-twitter-x"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"
+                />
+              </svg>
+              <!-- icon3 ********************************************* -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-youtube"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
+                />
+              </svg>
+              <!-- icon4 ********************************************* -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-bing"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8.35 5.046a.615.615 0 0 0-.54.575c-.009.13-.006.14.289.899.67 1.727.833 2.142.86 2.2q.101.215.277.395c.089.092.148.141.247.208.176.117.262.15.944.351.664.197 1.026.327 1.338.482.405.201.688.43.866.7.128.195.242.544.291.896.02.137.02.44 0 .564-.041.27-.124.495-.252.684-.067.1-.044.084.055-.039.278-.346.562-.938.707-1.475a4.42 4.42 0 0 0-2.14-5.028 70 70 0 0 0-.888-.465l-.53-.277-.353-.184c-.16-.082-.266-.138-.345-.18-.368-.192-.523-.27-.568-.283a1 1 0 0 0-.194-.03z"
+                />
+                <path
+                  d="M9.152 11.493a3 3 0 0 0-.135.083 320 320 0 0 0-1.513.934l-.8.496c-.012.01-.587.367-.876.543a1.9 1.9 0 0 1-.732.257c-.12.017-.349.017-.47 0a1.9 1.9 0 0 1-.884-.358 2.5 2.5 0 0 1-.365-.364 1.9 1.9 0 0 1-.34-.76 1 1 0 0 0-.027-.121c-.005-.006.004.092.022.22.018.132.057.324.098.489a4.1 4.1 0 0 0 2.487 2.796c.359.142.72.23 1.114.275.147.016.566.023.72.011a4.1 4.1 0 0 0 1.956-.661l.235-.149.394-.248.258-.163 1.164-.736c.51-.32.663-.433.9-.665.099-.097.248-.262.255-.283.002-.005.028-.046.059-.091a1.64 1.64 0 0 0 .25-.682c.02-.124.02-.427 0-.565a3 3 0 0 0-.213-.758c-.15-.314-.47-.6-.928-.83a2 2 0 0 0-.273-.12c-.006 0-.433.26-.948.58l-1.113.687z"
+                />
+                <path
+                  d="m3.004 12.184.03.129c.089.402.245.693.515.963a1.82 1.82 0 0 0 1.312.543c.361 0 .673-.09.994-.287l.472-.29.373-.23V5.334c0-1.537-.003-2.45-.008-2.521a1.82 1.82 0 0 0-.535-1.177c-.097-.096-.18-.16-.427-.33L4.183.24c-.239-.163-.258-.175-.33-.2a.63.63 0 0 0-.842.464c-.009.042-.01.603-.01 3.646l.003 8.035Z"
+                />
+              </svg>
+              <!-- icon5 ********************************************* -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-facebook"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
+                />
+              </svg>
+              <p>
+                ©2020 This page is protected by reCAPTCHA and is subject to the
+                Google <strong>Privacy Policy</strong> and
+                <strong>Terms of Service.</strong>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </div>
