media query complete

--- a/index.html
+++ b/index.html
@@ -969,7 +969,8 @@
                 <h3>All Images Included</h3>
                 <p>
                   Photography and Illustration SVGs are included in the download
-                  package and are free to use.
+                  package and are free to use. Leap scales to fit each device
+                  responsively.
                 </p>
               </div>
             </div>
@@ -1360,7 +1361,7 @@
                   </svg>
                 </div>
                 <div class="text">
-                  <p>348 Greenpoint Avenue Brooklyn, NY</p>
+                  <p>+61 3928 3324 Mon - Fri 9am - 5pm</p>
                 </div>
               </div>
               <div class="first">
@@ -1379,7 +1380,7 @@
                   </svg>
                 </div>
                 <div class="text">
-                  <p>348 Greenpoint Avenue Brooklyn, NY</p>
+                  <p>hello@company.io</p>
                 </div>
               </div>
             </div>
